argocd/polaris-exempt-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth
  labels:
    control-plane: local-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
  labels:
    control-plane: local-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: vector-db
  labels:
    control-plane: local-dev
