argocd/argocd-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080  
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443  
      nodePort: 30443
