argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web        
  routes:
    - match: Host(`argocd.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
